// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TESTING ChatItemTargetText RENDER continuous should match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": 6.4,
        "maxWidth": 300,
        "paddingLeft": 10,
        "paddingRight": 60,
      },
      Object {
        "marginTop": -3.2,
      },
    ]
  }
>
  <View
    style={
      Object {
        "borderRadius": 12,
        "height": 24,
        "marginRight": 4,
        "width": 24,
      }
    }
  />
  <ContextMenu
    actions={
      Array [
        Object {
          "systemIcon": "square.on.square",
          "title": "Copy",
        },
      ]
    }
    onPress={[Function]}
    previewBackgroundColor="transparent"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#1E3343",
            "borderRadius": 12,
            "borderTopStartRadius": 0,
            "flex": 1,
            "paddingBottom": 4,
            "paddingTop": 4,
          },
          Object {
            "paddingLeft": 8,
            "paddingRight": 8,
          },
        ]
      }
    >
      <View
        testID="chat-item-message"
      >
        <Text
          style={Object {}}
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                },
              ]
            }
          >
            message
          </Text>
        </Text>
      </View>
    </View>
  </ContextMenu>
</View>
`;

exports[`TESTING ChatItemTargetText RENDER not continuous should match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": 6.4,
        "maxWidth": 300,
        "paddingLeft": 10,
        "paddingRight": 60,
      },
      Object {},
    ]
  }
>
  <View
    style={
      Object {
        "marginRight": 4,
      }
    }
  >
    https://www.google.com
  </View>
  <ContextMenu
    actions={
      Array [
        Object {
          "systemIcon": "square.on.square",
          "title": "Copy",
        },
      ]
    }
    onPress={[Function]}
    previewBackgroundColor="transparent"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#1E3343",
            "borderRadius": 12,
            "borderTopStartRadius": 0,
            "flex": 1,
            "paddingBottom": 4,
            "paddingTop": 4,
          },
          Object {
            "paddingLeft": 8,
            "paddingRight": 8,
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "display": "flex",
              "flexDirection": "row",
            },
            Object {},
          ]
        }
        testID="chat-item-user-info"
      >
        <Text
          style={
            Object {
              "color": "#FFFFFF",
              "fontFamily": "Inter-SemiBold",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          username
        </Text>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#A5ACB8",
              "borderRadius": 2,
              "height": 3,
              "marginLeft": 5,
              "marginRight": 5,
              "width": 3,
            }
          }
        />
        <Text
          style={
            Object {
              "alignSelf": "center",
              "color": "#A5ACB8",
              "fontFamily": "Inter-ExtraLight",
              "fontSize": 10,
              "lineHeight": 12.19,
            }
          }
        >
          time
        </Text>
      </View>
      <View
        testID="chat-item-message"
      >
        <Text
          style={Object {}}
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 16,
                  "lineHeight": 24,
                },
              ]
            }
          >
            message
          </Text>
        </Text>
      </View>
    </View>
  </ContextMenu>
</View>
`;
